--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@capacitor/keyboard": "^5.0.7",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "^5.0.6",
+    "axios": "^1.6.3",
     "dom7": "^4.0.6",
+    "dotenv": "^16.3.1",
     "framework7": "^8.3.0",
     "framework7-icons": "^5.0.5",
     "framework7-vue": "^8.3.0",
