--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue": "^3.3.13"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "^5.6.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/compiler-sfc": "^3.3.13",
