--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framework7-icons": "^5.0.5",
     "framework7-vue": "^8.3.0",
     "material-icons": "^1.13.12",
+    "pinia": "^2.1.7",
     "skeleton-elements": "^4.0.1",
     "swiper": "^11.0.5",
     "vue": "^3.3.13"
